# hack_me

./: CMakeLists.txt  README.md  main.cpp
examples/: file1.txt  file2.txt  main_file.txt
include/: command_checker.h  data_base.h  encoder_decoder.h  first_process.h  read_write_wrapper.h  second_process.h
src/: command_checker.cpp  commands_applier.cpp  commands_sender.cpp  data_base.cpp  encoder_decoder.cpp  first_process.cpp  read_write_wrapper.cpp  second_process.cpp
